# libmat

./: CMakeLists.txt  Makefile
inc/: libmat.h
src/: degtorad.c  ft_mat4_add.c  ft_mat4_addf.c  ft_mat4_mul.c  ft_mat4_mulf.c  ft_mat4_mulvec4.c  ft_mat4_rot.c  ft_mat4_scale.c  ft_mat4_set.c  ft_mat4_sub.c  ft_mat4_subf.c  ft_mat4_trans.c  ft_vec3_set.c  ft_vec4_add.c  ft_vec4_addf.c  ft_vec4_mulf.c  ft_vec4_rotate_x.c  ft_vec4_rotate_y.c  ft_vec4_rotate_z.c  ft_vec4_set.c  ft_vec4_sub.c  ft_vec4_subf.c
src/mat4/: mat4_add.c  mat4_addf.c  mat4_cpy.c  mat4_look_at.c  mat4_mul.c  mat4_mulf.c  mat4_mulvec4.c  mat4_rot.c  mat4_scale.c  mat4_set.c  mat4_sub.c  mat4_subf.c  mat4_trans.c  mat4_transpose.c
src/utils/: degtorad.c  maxf.c  minf.c  radtodeg.c
src/vec3/: vec3_add.c  vec3_addf.c  vec3_cross_product.c  vec3_dot_product.c  vec3_is_null.c  vec3_mulf.c  vec3_neg.c  vec3_norm.c  vec3_normalize.c  vec3_rotate_x.c  vec3_rotate_y.c  vec3_rotate_z.c  vec3_set.c  vec3_sub.c  vec3_subf.c
src/vec4/: vec4_add.c  vec4_addf.c  vec4_mulf.c  vec4_rotate_x.c  vec4_rotate_y.c  vec4_rotate_z.c  vec4_set.c  vec4_sub.c  vec4_subf.c
